--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="images/logo.svg" alt="CWJ Consultoria CRM">
+                <img src="images/logo.svg" alt="CWJ Consultoria">
             </div>
             <nav>
                 <div class="mobile-menu-toggle">
